 VERSION 0.3.5 WIP
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.5

New Commands:
- Menu Item: added "check" and "shortcut" keywords #186
- Widgets:   added "is_item_container" #203
- Widgets:   added "get_item_parent" #203
- Widgets:   added "is_item_shown" #203

-----------------------------------------------------------------------
 VERSION 0.3.4 (9/9/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.4

New Commands:
- Widgets: Added "add_dummy"

Fixes:
- Colors: Fixed crash when adding a color more than 4 items long
- Window: fixed window changing position while autosizing #196


-----------------------------------------------------------------------
 VERSION 0.3.1 (9/7/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.1

Breaking Changes:

- Callbacks: All callbacks are now callables (not strings)
- Separator: Changed "add_seperator" to "add_separator" #188

Changes:
- Widgets: Changed "add_item_color style" to "set_item_color"

New Commands:
- Widgets: Added "clear_item_color"
- App:     Added "set_start_callback" #187

-----------------------------------------------------------------------
 VERSION 0.2.0 (9/5/2020)
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.2.0

New Features:

- Context Managers: You can now import dearpygui.wrappers to use context
	manager versions of all containers

Changes:

- Widgets: All "add_widget" commands now return true on successful
	adding or false.

Breaking Changes:

- Container Widgets: Replaced all "end_*" commands with a single "end" command

-----------------------------------------------------------------------